@@ -86,6 +86,8 @@ Additions:
      - automatically support Watchdog.
     * ecore_imf: Add ecore_imf_context_input_panel_layout_variation_set/get API
     * Add edje_object_part_text_input_panel_layout_variation_set/get API
+    * Evil:
+     - Add mkdtemp.
 
 Deprecations:
     * ecore_x:
